--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "test": "check-build && istanbul cover _mocha",
     "coveralls": "istanbul cover _mocha --report lcovonly && cat ./coverage/lcov.info | coveralls"
   },
+  "dependencies": {
+    "farmhash": "2.0.0"
+  },
   "devDependencies": {
     "check-build": "2.8.2",
     "mocha": "3.4.2",
