--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        node-version: [8.x, 10.x, 12.x]
+        node-version: [6.x, 8.x, 10.x, 12.x, 14.x]
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
